double scroll elevator fixed

--- a/front/src/styles/app.scss
+++ b/front/src/styles/app.scss
@@ -10,17 +10,22 @@
 a{
   text-decoration: none;
 }
-
-html, body {
+html{
+    margin: 0;
+    padding: 0;
+    width: 100%;
+    height: 100%;
+}
+body {
   background: #f8f8f8;
   font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
+  overflow-y: scroll;
+  overflow-x: hidden;
+  position:relative;
   margin: 0;
   padding: 0;
   width: 100%;
   height: 100%;
-  overflow-y: scroll;
-  overflow-x: hidden;
-  position:relative;
 }
 
 #app {
